Add multifields support and related config changes